benefits/static/css/styles.css
/* HTML element overrides */

body {
  font-weight: 400;
  font-size: 16px;
  line-height: 22px;
  color: #000000;
}

body,
h1,
h2,
h3,
h4,
h5,
h6,
p,
a,
span,
li {
  font-family: "Roboto", sans-serif;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-weight: 500;
  font-size: 24px;
  line-height: 30px;
  margin-top: 30px;
  margin-bottom: 20px;
}

h1 {
  font-weight: 700;
  font-size: 24px;
  line-height: 30px;
  letter-spacing: 0.05em;
}

p {
  margin-bottom: 1.5rem;
  font-size: 18px;
  line-height: 27px;
  letter-spacing: 0.05em;
}

label {
  font-size: 18px;
  line-height: 26px;
  letter-spacing: 0.05em;
}

/* making the sticky footer */

html,
body {
  height: 100%;
  overflow-y: unset;
}

body {
  display: flex;
  flex-direction: column;
}

main {
  flex-shrink: 0 !important;
}

main .main-row {
  min-height: calc(100vh - 120px);
}

footer {
  margin-top: auto;
  padding-top: 1rem;
  padding-bottom: 1rem;
}

footer .footer-links a {
  font-size: 16px;
}

/* class styles */

.bg-p2,
.bg-primary {
  background-color: #2b6597 !important;
}

.btn-lg {
  border-width: 2px;
}

/* Log In */

#login {
  background: #046b99;
  border: 0;
  border-radius: 0;
  color: #ffffff;
  cursor: pointer;
  display: block;
  line-height: 1;
  margin: 0;
  padding: 0.5rem 1.5rem;
  min-width: auto;
}

#login:hover {
  background: #2f4c65;
}

/* Sets the text `Login.gov` as transparent */
/* With an Login.gov logo image over it */
/* So screenreaders can read out `Login.gov` */
#login .fallback-text {
  background: url("/static/img/login-gov-logo-rev.svg") no-repeat;
  background-size: contain;
  display: inline-block;
  position: relative;
  width: 9.75rem;
  vertical-align: baseline;
}

.fallback-text {
  color: transparent;
}

/* Sign Out */

.signout-row {
  position: absolute;
  width: 100%;
  z-index: 100;
}

.signout-row .container {
  display: flex;
  justify-content: flex-end;
}

.signout-row .container .signout-link {
  font-size: 12px;
  text-decoration: underline;
  color: #2b6597;
  letter-spacing: 0.05rem;
  padding-top: 18px;
  display: block;
}

.btn-link {
  color: #046b99;
}

.btn-primary {
  text-transform: uppercase;
  letter-spacing: 0.05em;
}

.btn-outline-light {
  width: 126px;
  height: 38px;
  padding: 0px !important;
}

.form-control {
  border-radius: 0.25rem;
  border-color: #212121;
  border-width: 2px;
  color: #212121;
}

.form-control:focus-within {
  color: #212121;
}

.form-control-lg {
  border-radius: 0.3rem;
}

.required-label {
  color: #000;
}

.form-group:not(.with-errors) {
  margin-bottom: 2.375rem;
}

.form-group:not(.with-errors):nth-last-of-type(2) {
  margin-bottom: 3.375rem;
}

.form-group.with-errors label,
.form-group.with-errors .required-label {
  color: #de0c0c;
}

.form-group.with-errors .form-control {
  border-color: #de0c0c;
}

.form-group.with-errors .error-message {
  font-size: 14px;
  padding-left: 1rem;
}

.form-group.with-errors .error-message p {
  margin-bottom: 0;
}

.global-footer {
  background: #212121;
}

/* Eligibility Start */

.media-title {
  margin-top: 0;
  font-size: 24px;
  line-height: 30px;
}

.media-list {
  margin-top: 100px;
  margin-bottom: 80px;
  padding: 0;
  display: flex;
  justify-content: center;
}

.media-list .media {
  display: inline-flex;
  flex-direction: column;
  align-items: center;
  width: 33%;
}

.media-list .media:first-child .media-line:before,
.media-list .media:last-child .media-line:after {
  border-color: transparent;
}

.media-list .media .media-line {
  position: relative;
}

.media-list .media .media-line:before,
.media-list .media .media-line:after {
  content: " ";
  position: absolute;
  top: 50%;
  width: 142.5px;
  border-top: 3px dashed #53b3e2;
  margin-top: -1px;
  display: block;
}

.media-list .media .media-line:before {
  right: 128px;
}

.media-list .media .media-line:after {
  left: 128px;
}

.media-list .media .media-line .icon {
  width: 128px;
  height: 128px;
  position: relative;
  display: block;
  z-index: 10;
}

.media-list .media .media-body {
  padding: 0 3.4rem;
}

.media-list .media .media-body--heading {
  font-size: 18px;
  letter-spacing: 0.05em;
  margin-top: 64px;
  margin-bottom: 20px;
}

.media-list .media .media-body--heading ol {
  font-weight: 700;
  padding-left: 0;
}

.media-list .media .media-body--details {
  font-size: 16px;
  letter-spacing: 0.05em;
  padding-bottom: 0.4rem;
}

.media-list .media .media-body .media-body--links .btn-lg {
  font-size: 12px;
  line-height: 15px;
  letter-spacing: 0.05em;
  padding: 0;
  text-align: left;
  width: 100%;
  margin: 0;
}

.media-list .media .media-body .media-body--links .btn-lg:hover {
  color: #2f4c65;
}

.eligibility-start .container.content {
  padding-top: 5rem;
  padding-bottom: 3rem;
  width: initial;
  padding-left: 0;
  padding-right: 0;
}

.eligibility-start .buttons {
  display: flex;
  align-items: flex-end;
  justify-content: right;
}

.eligibility-start .container.content .buttons .btn {
  margin-left: initial;
  margin-right: initial;
}

.eligibility-start .container.content .buttons label {
  margin: 0 0.8rem 0 0;
  line-height: 1;
}

/* Enrollment Success */

.enrollment-success #login {
  padding: 0.3rem 0.6rem 0.1rem 0.6rem;
  vertical-align: middle;
}

.enrollment-success #login .fallback-text {
  width: 7rem;
  vertical-align: inherit;
}

.logged-out.enrollment-success .success-image {
  display: block;
  margin: 0 auto;
  padding-top: 10vh;
}

.logged-out.enrollment-success .container.content {
  padding-top: 20vh;
}

.radio-container {
  display: block;
  margin-left: 15%;
}

.radio-label {
  cursor: pointer;
  display: inline;
  margin-left: 15px;
}

.radio-input {
  cursor: pointer;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;

  border-radius: 50%;
  width: 25px;
  height: 25px;

  border: 3px solid #000;
  margin-right: 5px;
  margin-top: 20px;

  position: relative;
  top: 7px;
}

.radio-input:checked {
  background-color: #046b99;
  box-shadow: inset 0 0 0 2px white;
}

.radio-label-description {
  display: block;
  font-size: 0.75rem;
  margin-left: 2rem;
  font-weight: normal;
}

/* context-specific overrides */

/* Header */

.navbar.navbar-expand-sm.navbar-dark.bg-primary {
  padding: 8.5px 1rem;
}

.navbar-brand {
  padding-top: 0;
  padding-bottom: 0;
}

.navbar-brand img.sm {
  width: 120px;
}

.navbar-brand img.lg {
  width: 271px;
}

.container.content {
  margin-top: 2rem;
  margin-bottom: 2rem;
}

.container.content .buttons label {
  margin-bottom: 2rem;
}

.container.content h1.icon-title {
  padding-bottom: 1.5rem;
}

.container.content h1.icon-title span.icon {
  text-align: center;
  display: block;
  padding-bottom: 3rem;
}

.container.content.help {
  margin: 4rem auto 2rem auto;
}

.container.content.help h1 {
  letter-spacing: 0.05rem;
  font-weight: 700;
  font-size: 2.25rem;
  text-align: center;
  margin-top: 5.5rem;
  margin-bottom: 4rem;
}

.container.content.help h2 {
  letter-spacing: 0.05rem;
  font-weight: 700;
  font-size: 1.5rem;
  margin-bottom: 3rem;
  margin-top: 3rem;
}

.container.content.help p {
  margin-bottom: 2rem;
}

.container.content.help .buttons-agencies,
.with-agency-links .buttons-agencies {
  font-size: 18px;
  letter-spacing: 0.05rem;
  margin-bottom: 3rem;
}

.container.content.help .buttons-agencies a,
.with-agency-links .container.content .buttons-agencies a {
  display: table;
  margin-bottom: 0.2rem;
}

.container.content.help .buttons-agencies label,
.with-agency-links .container.content .buttons-agencies label {
  display: block;
  margin-top: 2rem;
  font-size: 18px;
}

.container.content.help .button-back {
  margin-top: 5rem;
  margin-bottom: 5rem;
}

.container.content h1 ~ p:nth-last-of-type(1) {
  margin-bottom: 2rem;
}

.container.content .btn-lg {
  font-weight: 500;
  margin-bottom: 1rem;
  padding: 0.8125rem;
  /* btn-lg height is 60px */
  width: 100%;
}

.container.content .btn-link {
  text-decoration: underline;
}

/* media queries */

@media (max-width: 320px) {
  #login {
    padding: 1rem 1.25rem;
  }

  .eligibility-start .container.content .buttons {
    padding: 0 3rem;
  }
}

@media (max-width: 767px) {
  /* xs and sm */
  .global-footer ul li {
    text-align: center;
  }

  .radio-container {
    display: block;
    margin-left: 0%;
  }

  .radio-label {
    display: inline;
    margin-left: 5px;
  }

  .container.content {
    padding-left: 0;
    padding-right: 0;
  }
}

@media (max-width: 992px) {
  /* Eligibility Start */

  .media-list {
    display: flex;
    flex-direction: column;
    gap: 40px;
  }

  .media-list .media {
    display: flex;
    flex-direction: row;
    align-items: stretch;
    width: 100%;
  }

  .media-list .media .media-body--heading {
    margin-top: 0;
  }

  .media-list .media .media-line::before {
    display: none;
  }

  .media-list .media .media-line::after {
    top: 1px;
    height: calc(100% + 40px);
    left: -50%;
    right: 50%;
    z-index: 1;
    width: 100%;
    border-right: 3px dashed #53b3e2;
    border-top: none;
  }

  .eligibility-start .container.content .buttons {
    flex-direction: column;
    align-items: center;
  }

  #login {
    width: inherit;
  }

  .eligibility-start .container.content .buttons label {
    margin: 0 0 0.8rem 0;
  }

  /* Override for only the Agency Index page */
  .agency-index .container.content h1 ~ p:nth-last-of-type(1) {
    margin-bottom: 2rem;
  }

  .logged-out.enrollment-success .success-image {
    padding-top: 5vh;
  }

  .logged-out.enrollment-success .container.content {
    padding-top: 10vh;
  }
}

@media (min-width: 992px) {
  /* undoing the sticky footer for pages with header image
       the backup plan is to color the body the same as the footer
       to avoid the floating footer look
    */
  .with-image main {
    flex-shrink: unset;
  }

  footer {
    margin-top: unset;
    padding-top: 0.138rem;
    padding-bottom: 0.138rem;
  }

  .container.content {
    padding-left: 3.5rem;
    padding-right: 3.5rem;
    padding-top: 2rem;
    padding-bottom: 2rem;
    margin: 0;
  }

  .container.content input[type="submit"],
  .container.content .btn {
    width: fit-content;
    min-width: 250px;
    display: block;
    margin-left: auto;
    margin-right: auto;
  }

  /* Override for only the Agency Index page */
  .agency-index .container.content h1 ~ p:nth-last-of-type(1) {
    margin-bottom: 4rem;
  }
}

@media (min-width: 1200px) {
  /* xl+ */
  .container.content {
    padding-left: 5rem;
    padding-right: 5rem;
    padding-top: 4.5rem;
    padding-bottom: 2rem;
    margin: 0;
  }

  /* Override for only the Agency Index page */
  .agency-index .container.content h1 ~ p:nth-last-of-type(1) {
    margin-bottom: 5rem;
  }
}

